--- a/django_stripe/stripe_api/templates/home.html
+++ b/django_stripe/stripe_api/templates/home.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Django + Stripe Checkout</title>
+    <title>Buy Item {{ item.id }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <script src="https://js.stripe.com/v3/"></script>
     <script src="{% static 'main.js' %}"></script>
@@ -15,6 +15,9 @@
 
 <body>
     <section class="section">
+        <h1>Item {{ item.id }}</h1>
+        <p>Description of Item {{ item.id }}</p>
+        <p>{{ item.description }}</p>
         <div class="container">
             <button class="button is-primary" id="submitBtn">Buy!</button>
         </div>
