--- a/django_stripe/stripe_api/templates/index.html
+++ b/django_stripe/stripe_api/templates/index.html
@@ -15,13 +15,10 @@
 
 <body>
     <section class="section">
-        <h1>Item №: {{ item.id }}</h1>
-        <p>Description:</p>
-        <p>{{ item.description }}</p>
-        <p>Price: {{ item.price }}.00 $</p>
-        <div class="container">
-            <button class="button is-primary" id="submitBtn">Buy!</button>
-        </div>
+        <h1>List of Items:</h1>
+        {% for item in items %}
+        <a href="{% url 'index' item.id%}">{{item}}</a><br>
+        {% endfor %}
     </section>
 </body>
 
