changes js, views.py and ulrs

--- a/django_stripe/stripe_api/templates/home.html
+++ b/django_stripe/stripe_api/templates/home.html
@@ -18,7 +18,7 @@
         <h1>Item №: {{ item.id }}</h1>
         <p>Description:</p>
         <p>{{ item.description }}</p>
-        <p>Price: {{ item.price }}.00 $</p>
+        <p>Price: {{ item.price }}</p>
         <div class="container">
             <button class="button is-primary" id="submitBtn">Buy!</button>
         </div>
